GA삭제, GTM태그, ViewContent

--- a/_posts/2020-05-16-naversa1.md
+++ b/_posts/2020-05-16-naversa1.md
@@ -1,6 +1,7 @@
 ---
 layout: post
 permalink: /naversa1/
+content_id: 7
 title: '네이버 검색 광고 직접 하는 방법 for 검색 광고 초보자, 1인 사업자'
 date: 2020-05-16 15:00:00 +09:00
 feature: '/img/posts/08/1200628.png'
@@ -27,23 +28,23 @@ description: '키워드, 입찰가, 광고 노출 기준 한번에 이해하기'
 ##### 1-1. 키워드
 
 말 그대로**'이용자가 검색할 법한 단어'**를 말한다.
-내 브랜드와 관계된 아주 기본적인 키워드부터, 연관 키워드까지 추측해 일종의 키워드 셋을 꾸리게 된다. 
+내 브랜드와 관계된 아주 기본적인 키워드부터, 연관 키워드까지 추측해 일종의 키워드 셋을 꾸리게 된다.
 
 **Ex - 꽃배달 업체*
 
 *기본 키워드 - 꽃배달, 꽃다발, 꽃바구니, 화환*
 
-*연관 키워드 - 졸업 선물, 생일 선물, 기념일 선물 추천, 이벤트* 
+*연관 키워드 - 졸업 선물, 생일 선물, 기념일 선물 추천, 이벤트*
 
 ✔ 우리는 키워드를 잘 선정해 광고 노출 순위를 관리하는 동시에, 이용자가 내 브랜드를 클릭할 만한 키워드를 신규 발굴하는 작업까지 같이 할 수 있어야 한다.
 
 ##### 1-2. 입찰가
 
-입찰가는 말 그대로 **'키워드 한 개에 얼마의 가격을 설정할지'** 결정하는 것. 위에서 말한 키워드 셋을 꾸렸다면, 단어 하나 하나에 입찰가를 설정하게 된다. 
+입찰가는 말 그대로 **'키워드 한 개에 얼마의 가격을 설정할지'** 결정하는 것. 위에서 말한 키워드 셋을 꾸렸다면, 단어 하나 하나에 입찰가를 설정하게 된다.
 
 당연한 얘기지만, 사람들이 많이 검색하고/ 업종을 대표하는 키워드(경쟁사가 노출 우위를 점하고 싶어하는 키워드)는 입찰가가 높다.
 
-입찰가를 결정했다면, 이에 따라 광고 노출 순위가 매겨진다. 
+입찰가를 결정했다면, 이에 따라 광고 노출 순위가 매겨진다.
 
 *Ex - 키워드 '여성 구두'*
 
@@ -56,7 +57,7 @@ description: '키워드, 입찰가, 광고 노출 기준 한번에 이해하기'
 검색 광고는 대부분 CPC(Cost per Click, 클릭 1회 당 비용) 과금 방식이다. 쉽게 말해 이용자의 클릭 한번에 '이 만큼의 돈을 지불하겠다'고 얘기하는 것.
 
 입찰가를 1만원으로 설정하면, 10번의 클릭만으로도 광고비 10만원이 지출되는 셈인데,
-**광고를 통해 들어온 10명이 우리 브랜드에 안겨주는 매출은 얼마인지 생각하면** 나의 입찰가가 적정한지 판단할 수 있다. 
+**광고를 통해 들어온 10명이 우리 브랜드에 안겨주는 매출은 얼마인지 생각하면** 나의 입찰가가 적정한지 판단할 수 있다.
 
 ✔ 우리는 각 키워드의 순위별 입찰가를 파악하고, 원하는 노출 순위에 맞게 가격을 설정할 수 있어야 한다.
 
